--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title> <%=title%> </title>
-  <script src="./json-editor/dist/jsoneditor.js"></script>
+  <script src="./@json-editor/json-editor/dist/jsoneditor.js"></script>
   <link href="./css/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/font-awesome.css">
   <script src="./ace-builds/src-noconflict/ace.js"></script>
@@ -102,27 +102,8 @@ window.ace.config.set("basePath", "./ace-builds/src-noconflict/");
       ajax: true,
 
       // The schema for the editor
-      schema: { $ref: "schema2.json" }
-        /* {
-          type: "array",
-          title: "CQRS",
-          format: "tabs",
-          items: {
-            title: "Aggregates",
-            headerTemplate: "{{i}} - {{self.name}}",
-            oneOf: [
-              {
-                
-                title: "Basic Person"
-              },
-              {
-
-                title: "Complex Person"
-              }
-            ]
-          }
-        } */,
-
+      schema: { $ref: "schema.json" }
+       ,
       // Seed the form with a starting value
       startval: starting_value,
 
@@ -211,13 +192,24 @@ window.ace.config.set("basePath", "./ace-builds/src-noconflict/");
       const request = new Request('/editor',
         {
           headers: {
-            'Accept': 'application/json',
+            'Accept': 'application/zip',
             'Content-Type': 'application/json'
           },
           method: 'POST', body: JSON.stringify({schema})
         });
-      fetch(request).then((res) => res.json()).then((res) => {
-        console.log(res)
+      fetch(request).then((res) => res.blob())
+        .then(blob => {
+            console.log(blob.size,blob.type)
+            var url = window.URL.createObjectURL(blob);
+            var a = document.createElement('a');
+            a.href = url;
+            a.download = "generated.zip";
+            document.body.appendChild(a); // we need to append the element to the dom -> otherwise it will not work in firefox
+            a.click();    
+            a.remove();  //afterwards we remove the element again         
+        })
+      .then(() => {
+        console.log("downloading file")
       }).catch((e) => {
         console.log(e)
       })
