--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,6 +48,10 @@
     .ctn {
       display: flex;
       flex-direction: row;
+    
+    }
+    #editor_holder{
+      width: 100%;
     }
   </style>
 </head>
@@ -73,9 +77,9 @@
 
       </div>
     </div>
-    <div>
+    
       <div id="editor_holder"></div>
-    </div>
+    
   </div>
 
 
