--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title> <%=title%> </title>
-  <script src="./@json-editor/json-editor/dist/jsoneditor.js"></script>
-  <link href="./css/tailwind.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/font-awesome.css">
-  <script src="./ace-builds/src-noconflict/ace.js"></script>
+  <script src="/@json-editor/json-editor/dist/jsoneditor.js"></script>
+  <link href="/css/tailwind.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="/css/font-awesome.css">
+  <script src="/ace-builds/src-noconflict/ace.js"></script>
 
   <style>
     .buttons {
@@ -94,7 +94,7 @@
     };
 
 // Set ACE Editor basePath to same path as CDN Library.
-window.ace.config.set("basePath", "./ace-builds/src-noconflict/");
+window.ace.config.set("basePath", "/ace-builds/src-noconflict/");
 
     var starting_value = restoreFromStorage() || {};
 
@@ -106,7 +106,7 @@ window.ace.config.set("basePath", "./ace-builds/src-noconflict/");
       ajax: true,
 
       // The schema for the editor
-      schema: { $ref: "schema.json" }
+      schema: { $ref: "/schema.json" }
        ,
       // Seed the form with a starting value
       startval: starting_value,
